--- a/spa-personal/src/Navbar.css
+++ b/spa-personal/src/Navbar.css
@@ -19,7 +19,7 @@ a.Title {
     color: #403C3C;
     text-decoration: none;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 600;
 }
   
 a.Title:hover {
