added toggle component but need to fix

--- a/spa-personal/src/Navbar.css
+++ b/spa-personal/src/Navbar.css
@@ -24,7 +24,7 @@ a.Title {
   
 a.Title:hover {
     color: #403C3C;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
   
 a.Title::before {
@@ -49,7 +49,7 @@ a.Title:hover::before {
 .Logo {
     height: 100px;
     width: 170px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 /*Styling the icons */
