--- a/spa-personal/src/Panels.css
+++ b/spa-personal/src/Panels.css
@@ -27,25 +27,27 @@
     align-items: left; 
 
     /*for the on hover animation*/
-    transition: 0.3s ease-in-out;
+    /* transition: 0.3s; */
 }
 
-.Card:hover {
+/* .Card:hover {
     transform: scale(1.05);
-    box-shadow: 0 0 10px -10px rgba(0, 0, 0, 0.25);
-}
+} */
 
 .Card-number {
     font-size: 40px; 
     font-weight: 700; /*bold*/
+    transform: none;
 }
 
 .Card-title {
     font-size: 25px; 
     font-weight: 700;
+    transform: none;
 }
 
 .Card-text {
     font-size: 16px;
     font-weight: 600; /*semi-bold*/
+    transform: none;
 }
